Closed
Bug 931306
Opened 12 years ago
Closed 12 years ago
[DBus] DBusThread fails to compile on latest compilers
Categories
(Firefox OS Graveyard :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: bhargavg1, Assigned: bhargavg1)
References
Details
(Whiteboard: [review:498808])
Attachments
(1 file)
|
991 bytes,
patch
|
tzimmermann
:
review+
qdot
:
review+
|
Details | Diff | Splinter Review |
We see that DBusThread fails to compile on latest compilers such gcc 4.7 used in JB @following line,
https://github.com/mozilla/mozilla-central/blob/master/ipc/dbus/DBusThread.cpp#L229
with the following error,
error: cannot convert 'tag_nsresult' to 'bool' in return
+++ This bug was initially created as a clone of Bug #927459 +++
DBusThread is actually not a thread, but a connection to the DBus service. And it doesn't really handle connections, but mostly polls file descriptors.
The name should be changed into something more meaning full, such as DBusWatcher; and the functions for handling DBusWatch structures should be converted to methods of DBusWatcher.
Attachment #822681 -
Flags: review?(tzimmermann)
Attachment #822681 -
Flags: review?(kyle)
Comment 2•12 years ago
|
||
Comment on attachment 822681 [details] [diff] [review]
bug_931306.patch
Review of attachment 822681 [details] [diff] [review]:
-----------------------------------------------------------------
Oh, sorry. That was my fault. Thanks for fixing this.
Attachment #822681 -
Flags: review?(tzimmermann) → review+
Updated•12 years ago
|
Attachment #822681 -
Flags: review?(kyle) → review+
Keywords: checkin-needed
Comment 4•12 years ago
|
||
Assignee: nobody → bhargavg1
Keywords: checkin-needed
Comment 5•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•