Bug 931306 - DBusThread fails to compile on latest compilers. r=tzimmermann, r=qDot